--- a/current_location.info.yml
+++ b/current_location.info.yml
@@ -4,3 +4,5 @@ description: 'Display Current location and time.'
 package: Block
 core_version_requirement: ^9 || ^10
 configure: current_location.settings
+dependencies:
+  - drupal:block
